--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -1,39 +1,5 @@
 name: Build VCV Rack Plugin
-
-on:
-  workflow_dispatch:
-    inputs:
-      linux_x64:
-        description: 'Build Linux x64 plugin'
-        required: true
-        default: false
-        type: boolean
-      win_x64:
-        description: 'Build Windows x64 plugin'
-        required: true
-        default: false
-        type: boolean
-      mac_x64:
-        description: 'Build Mac x64 plugin'
-        required: true
-        default: false
-        type: boolean
-      mac_arm64:
-        description: 'Build Mac arm64 plugin'
-        required: true
-        default: false
-        type: boolean
-  push:
-    tags:
-      - 'vcv-v[0-9]+.[0-9]+.[0-9]+'
-      - 'debug-*'
-    branches:
-      - main
-    paths:
-      - '!**.json'
-      - '!**.md'
-      - '!**.svg'
-
+on: [push, pull_request]
 
 env:
   rack-sdk-version: latest
@@ -43,73 +9,73 @@ defaults:
   run:
     shell: bash
 
-jobs:  
-  build-lin-x64:
-    if: ${{ github.event_name == 'push' || inputs.linux_x64 || startsWith(github.ref, 'refs/tags/vcv-v') }}
-    name: lin-x64
+jobs:
+
+  modify-plugin-version:
+    name: Modify plugin version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        id: plugin-version-cache
+        with:
+          path: plugin.json
+          key: ${{ github.sha }}-${{ github.run_id }}
+      - run: |
+          gitrev=`git rev-parse --short HEAD`
+          pluginversion=`jq -r '.version' plugin.json`
+          echo "Set plugin version from $pluginversion to $pluginversion-$gitrev"
+          cat <<< `jq --arg VERSION "$pluginversion-$gitrev" '.version=$VERSION' plugin.json` > plugin.json
+        # only modify plugin version if no tag was created
+        if: "! startsWith(github.ref, 'refs/tags/v')"
+
+  build:
+    name: ${{ matrix.platform }}
+    needs: modify-plugin-version
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4ms/rack-plugin-toolchain-win-linux
+      image: ghcr.io/qno/rack-plugin-toolchain-win-linux
       options: --user root
     strategy:
-      fail-fast: false
+      matrix:
+        platform: [win-x64, lin-x64]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - uses: actions/cache@v4
+        id: plugin-version-cache
+        with:
+          path: plugin.json
+          key: ${{ github.sha }}-${{ github.run_id }}
       - name: Build plugin
-        run: |          
+        run: |
           export PLUGIN_DIR=$GITHUB_WORKSPACE
           pushd ${{ env.rack-plugin-toolchain-dir }}
-          curl -sL https://github.com/Kitware/CMake/releases/download/v3.24.3/cmake-3.24.3-linux-x86_64.sh -o cmakeinstall.sh
-          chmod +x cmakeinstall.sh
-          ./cmakeinstall.sh --prefix=/usr/local --exclude-subdir
-          rm cmakeinstall.sh
-          make plugin-build-lin-x64
+          make plugin-build-${{ matrix.platform }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           path: ${{ env.rack-plugin-toolchain-dir }}/plugin-build
-          name: lin-x64
+          name: ${{ matrix.platform }}
 
-  build-win-x64:
-    if: ${{ inputs.win_x64 || startsWith(github.ref, 'refs/tags/vcv-v') }}
-    name: win-x64
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4ms/rack-plugin-toolchain-win-linux
-      options: --user root
+  build-mac:
+    name: mac
+    needs: modify-plugin-version
+    runs-on: macos-latest
     strategy:
       fail-fast: false
+      matrix:
+        platform: [x64, arm64]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build plugin
-        run: |          
-          export PLUGIN_DIR=$GITHUB_WORKSPACE
-          pushd ${{ env.rack-plugin-toolchain-dir }}
-          curl -sL https://github.com/Kitware/CMake/releases/download/v3.24.3/cmake-3.24.3-linux-x86_64.sh -o cmakeinstall.sh
-          chmod +x cmakeinstall.sh
-          ./cmakeinstall.sh --prefix=/usr/local --exclude-subdir
-          rm cmakeinstall.sh
-          make plugin-build-win-x64
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/cache@v4
+        id: plugin-version-cache
         with:
-          path: ${{ env.rack-plugin-toolchain-dir }}/plugin-build
-          name: win-x64
-
-  build-mac-x64:
-    if: ${{ inputs.mac_x64 || startsWith(github.ref, 'refs/tags/vcv-v') }}
-    name: mac_x64 
-    runs-on: macos-13
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+          path: plugin.json
+          key: ${{ github.sha }}-${{ github.run_id }}
       - name: Get Rack-SDK
         run: |
           pushd $HOME
@@ -117,57 +83,51 @@ jobs:
           unzip Rack-SDK.zip
       - name: Build plugin
         run: |
+          CROSS_COMPILE_TARGET_x64=x86_64-apple-darwin
+          CROSS_COMPILE_TARGET_arm64=arm64-apple-darwin
           export RACK_DIR=$HOME/Rack-SDK
-          export CROSS_COMPILE=x86_64-apple-darwin
+          export CROSS_COMPILE=$CROSS_COMPILE_TARGET_${{ matrix.platform }}
           make dep
           make dist
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           path: dist/*.vcvplugin
-          name: mac-x64
-
-  build-mac-arm64:
-    if: ${{ inputs.mac_arm64 || startsWith(github.ref, 'refs/tags/vcv-v') }}
-    name: mac_arm64 
-    runs-on: macos-13
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Get Rack-SDK
-        run: |
-          pushd $HOME
-          wget -O Rack-SDK.zip https://vcvrack.com/downloads/Rack-SDK-${{ env.rack-sdk-version }}-mac-x64+arm64.zip
-          unzip Rack-SDK.zip
-      - name: Build plugin
-        run: |
-          export RACK_DIR=$HOME/Rack-SDK
-          export CROSS_COMPILE=arm64-apple-darwin
-          make dep
-          make dist
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          path: dist/*.vcvplugin
-          name: mac-arm64
+          name: mac-${{ matrix.platform }}
 
   publish:
-    if: startsWith(github.ref, 'refs/tags/vcv-v')
     name: Publish plugin
-    runs-on: ubuntu-24.04
-    needs: [build-lin-x64, build-win-x64, build-mac-x64, build-mac-arm64]
+    # only create a release if a tag was created that is called e.g. v1.2.3
+    # see also https://vcvrack.com/manual/Manifest#version
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    needs:  [build, build-mac]
     steps:
+      - uses: actions/checkout@v4
+      - uses: FranzDiebold/github-env-vars-action@v2
+      - name: Check if plugin version matches tag
+        run: |
+          pluginversion=`jq -r '.version' plugin.json`
+          if [ "v$pluginversion" != "${{ env.CI_REF_NAME }}" ]; then
+            echo "Plugin version from plugin.json 'v$pluginversion' doesn't match with tag version '${{ env.CI_REF_NAME }}'"
+            exit 1
+          fi
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref }}
+          name: Release ${{ env.CI_REF_NAME }}
+          body: |
+            ${{ env.CI_REPOSITORY_NAME }} VCV Rack Plugin ${{ env.CI_REF_NAME }}
+          draft: false
+          prerelease: false
       - uses: actions/download-artifact@v4
         with:
           path: _artifacts
-      - uses: FranzDiebold/github-env-vars-action@v2
-      - uses: softprops/action-gh-release@v1
-        with:        
-          name: "Development Build: ${{ env.CI_REF_NAME }}"
-          body: "VCV plugin version as of tag ${{ env.CI_REF_NAME }}"
-          files: |          
-            _artifacts/**/*.vcvplugin
-      
+      - name: Upload release assets
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: _artifacts/**/*.vcvplugin
+          tag: ${{ github.ref }}
+          file_glob: true
