--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -1,133 +1,69 @@
-name: Build VCV Rack Plugin
-on: [push, pull_request]
+name: Build and release MetaModule plugin
 
-env:
-  rack-sdk-version: latest
-  rack-plugin-toolchain-dir: /home/build/rack-plugin-toolchain
-
-defaults:
-  run:
-    shell: bash
+on:
+  workflow_dispatch:
+    inputs:
+      SDK_branch:
+        description: 'MetaModule SDK branch'
+        required: true
+        type: choice
+        options:
+          - main
+          - v2.0-dev
+      do_release:
+        description: 'Create Release (must also select Tag above!")'
+        required: true
+        default: false
+        type: boolean
 
 jobs:
-
-  modify-plugin-version:
-    name: Modify plugin version
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/cache@v4
-        id: plugin-version-cache
-        with:
-          path: plugin.json
-          key: ${{ github.sha }}-${{ github.run_id }}
-      - run: |
-          gitrev=`git rev-parse --short HEAD`
-          pluginversion=`jq -r '.version' plugin.json`
-          echo "Set plugin version from $pluginversion to $pluginversion-$gitrev"
-          cat <<< `jq --arg VERSION "$pluginversion-$gitrev" '.version=$VERSION' plugin.json` > plugin.json
-        # only modify plugin version if no tag was created
-        if: "! startsWith(github.ref, 'refs/tags/v')"
-
-  build:
-    name: ${{ matrix.platform }}
-    needs: modify-plugin-version
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/qno/rack-plugin-toolchain-win-linux
-      options: --user root
+  build-lin:
     strategy:
-      matrix:
-        platform: [win-x64, lin-x64]
+        matrix:
+          gcc: ['12.3.Rel1']
+    name: "Build firmware on linux"
+    runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Install Arm GNU Toolchain (arm-none-eabi-gcc)
+        uses: carlosperate/arm-none-eabi-gcc-action@v1
         with:
-          submodules: recursive
-      - uses: actions/cache@v4
-        id: plugin-version-cache
-        with:
-          path: plugin.json
-          key: ${{ github.sha }}-${{ github.run_id }}
-      - name: Build plugin
-        run: |
-          export PLUGIN_DIR=$GITHUB_WORKSPACE
-          pushd ${{ env.rack-plugin-toolchain-dir }}
-          make plugin-build-${{ matrix.platform }}
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          path: ${{ env.rack-plugin-toolchain-dir }}/plugin-build
-          name: ${{ matrix.platform }}
+          release: ${{ matrix.gcc }}
 
-  build-mac:
-    name: mac
-    needs: modify-plugin-version
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [x64, arm64]
-    steps:
-      - uses: actions/checkout@v4
+      - name: Install cmake
+        uses: jwlawson/actions-setup-cmake@v1.13
         with:
-          submodules: recursive
-      - uses: actions/cache@v4
-        id: plugin-version-cache
-        with:
-          path: plugin.json
-          key: ${{ github.sha }}-${{ github.run_id }}
-      - name: Get Rack-SDK
-        run: |
-          pushd $HOME
-          wget -O Rack-SDK.zip https://vcvrack.com/downloads/Rack-SDK-${{ env.rack-sdk-version }}-mac-x64+arm64.zip
-          unzip Rack-SDK.zip
-      - name: Build plugin
-        run: |
-          CROSS_COMPILE_TARGET_x64=x86_64-apple-darwin
-          CROSS_COMPILE_TARGET_arm64=arm64-apple-darwin
-          export RACK_DIR=$HOME/Rack-SDK
-          export CROSS_COMPILE=$CROSS_COMPILE_TARGET_${{ matrix.platform }}
-          make dep
-          make dist
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          path: dist/*.vcvplugin
-          name: mac-${{ matrix.platform }}
+          cmake-version: '3.26.x'
 
-  publish:
-    name: Publish plugin
-    # only create a release if a tag was created that is called e.g. v1.2.3
-    # see also https://vcvrack.com/manual/Manifest#version
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    needs:  [build, build-mac]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: FranzDiebold/github-env-vars-action@v2
-      - name: Check if plugin version matches tag
+      - name: Git setup
+        run: git config --global --add safe.directory '*'
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+
+      - name: Install linux dependencies
         run: |
-          pluginversion=`jq -r '.version' plugin.json`
-          if [ "v$pluginversion" != "${{ env.CI_REF_NAME }}" ]; then
-            echo "Plugin version from plugin.json 'v$pluginversion' doesn't match with tag version '${{ env.CI_REF_NAME }}'"
-            exit 1
-          fi
-      - name: Create Release
+          sudo apt-get update
+          sudo apt-get install ninja-build
+
+      - name: Set Release Version
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: FranzDiebold/github-env-vars-action@v2
+
+      - name: Build
+        run: |
+          mkdir -p metamodule-plugins
+          git clone -b ${{ inputs.SDK_branch }} https://github.com/4ms/metamodule-plugin-sdk --recursive 
+          cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=metamodule-plugin-sdk
+          cmake --build build
+          # Add version tag and required firmware version to the plugin file name:
+          cd metamodule-plugins && for f in *.mmplugin; do mv $f ${f%.mmplugin}-${{ env.CI_REF_NAME }}.mmplugin; done;
+
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/') && ${{ inputs.do_release }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          name: Release ${{ env.CI_REF_NAME }}
-          body: |
-            ${{ env.CI_REPOSITORY_NAME }} VCV Rack Plugin ${{ env.CI_REF_NAME }}
-          draft: false
-          prerelease: false
-      - uses: actions/download-artifact@v4
-        with:
-          path: _artifacts
-      - name: Upload release assets
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: _artifacts/**/*.vcvplugin
-          tag: ${{ github.ref }}
-          file_glob: true
+          name: "Release: ${{ env.CI_REF_NAME }}"
+          files: |
+            metamodule-plugins/*.mmplugin
