Stargazer: init commit. Stargazer running, has not been optimized yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ target_sources(Moffenzeef PRIVATE
     ${SOURCE_DIR}/src/TheRunner.cpp
     ${SOURCE_DIR}/src/Kleztizer.cpp
     ${SOURCE_DIR}/src/Tantz.cpp
+    ${SOURCE_DIR}/src/Stargazer.cpp
     ${SOURCE_DIR}/src/plugin.cpp
     ${SOURCE_DIR}/src/plugin.hpp
 ) 
